Social icons added

--- a/templates/HFC/email_layout.html
+++ b/templates/HFC/email_layout.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         img {
         border: none;
@@ -322,6 +323,13 @@
           border-color: #0068ff !important; 
         } 
       }
+      #social{
+        display:inline-block;
+        text-align:center;
+        width:100%;
+        }
+      
+
     </style>
   </head>
   <body class="">
@@ -352,7 +360,18 @@
               </table>
             </div>
             <!-- END FOOTER -->
-
+            <div id ="social">
+              <a href="https://www.facebook.com/HackForChange" target="blank" >
+                <img width="31"src="https://www.hackforchange.co.in/static/images/facebook-icon.png" alt="Icon"></a>
+              <a href="https://www.instagram.com/hackforchange/" target="blank" >
+              <img width="31"src="https://www.hackforchange.co.in/static/images/insta-icon.png" alt="Icon"></a>
+              <a href="https://www.linkedin.com/company/hack-for-change/" target="blank" >
+                <img width="31"src="https://www.hackforchange.co.in/static/images/linkedin-icon.png" alt="Icon"></a>
+              <a href="https://twitter.com/HackForChangeIN" target="blank" >
+                <img width="31"src="https://www.hackforchange.co.in/static/images/twitter-img.png" alt="Icon"></a>
+              <a href="https://github.com/HackForChangeIN" target="blank" >
+                <img width="31"src="https://www.hackforchange.co.in/static/images/github-img.png" alt="Icon"></a>
+              </div>
           <!-- END CENTERED WHITE CONTAINER -->
           </div>
         </td>
