Event url comes in place of blog

--- a/templates/EventsEngine/event_detail.html
+++ b/templates/EventsEngine/event_detail.html
@@ -7,7 +7,7 @@
 <meta name="description" property="og:description" content="{{event.description|striptags|truncatewords:20 }}">
 <meta property="og:type" content="article">
 {% if event.banner %}
-<meta property="og:image" content="{{event.banner.url}}">
+<meta property="og:image" content="{{event.open_graph_banner.url}}">
 {% else %}
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 {% endif %}
