--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -36,6 +36,7 @@
                         <li><a href="{% url 'community' %}">Community</a></li>
                         <li><a href="{% url 'job' %}">Join Core Team</a></li>
                         <li><a href="{% url 'events' %}">Ongoing Events</a></li>
+                        <li><a href="{% url 'blog' %}">Blog</a></li>
                     </ul>
                 </div>
                 <div class="footer__menu">
