--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1482,6 +1482,7 @@ ______________________*/
 .post-img img{
 	width: 100%;
 	display: block;
+	border-radius: 10px 10px 0 0;
 }
 .post-info{
 	background-color:#fffcf0;
