Title tags added

--- a/templates/HFC/problem_statements_with_issue_area.html
+++ b/templates/HFC/problem_statements_with_issue_area.html
@@ -8,7 +8,7 @@
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
 {% endblock %}
-{% block title %} Problem Statements | Hack For Change {% endblock %}
+{% block title %} {{prob_list.problem_statement|safe}} | Hack For Change {% endblock %}
 
 {% block main %}
 <!--Banner start -->
