--- a/templates/HFC/project_detail.html
+++ b/templates/HFC/project_detail.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://hackforchange.co/problem-statements/{{problem.title_slug}}">
 {% endblock %}
 {% load static  %}
-{% block title %} Project Details | Hack For Change {% endblock %}
+{% block title %} {{project.name}} | Hack For Change {% endblock %}
 
 {% block main %}
 <!--Banner start -->
