--- a/templates/HFC/issue_area_detail.html
+++ b/templates/HFC/issue_area_detail.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://hackforchange.co/problem-statements/{{problem.title_slug}}">
 {% endblock %}
 {% load static  %}
-{% block title %} Focus Areas | Hack For Change {% endblock %}
+{% block title %} {{issue.issue_area}} | Hack For Change {% endblock %}
 
 {% block main %}
 <!--Banner start -->
