Meta description added to about,project and problem details

--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -4,7 +4,7 @@
 {% block meta_tags %}
 <meta content="" name="keywords">
 <meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="description" property="og:description" content="Hack For Change is a community of developers, software engineers and other like minded individuals, focused on solving specific problem statements proposed by social and governmental organisations, using emerging technologies">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
