Meta description added to home page

--- a/templates/HFC/hfc_home.html
+++ b/templates/HFC/hfc_home.html
@@ -2,9 +2,9 @@
 {% load static  %}
 
 {% block meta_tags %}
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta property="og:description" name="description"  content="">
+<meta name="keywords" content="">
+<meta property="og:title" content="Hack For Change">
+<meta property="og:description" name="description"  content="Lets join hands to create a lasting social change !!! Our approach to empowerment is to design technology-driven systemic solutions for present-day social challenges">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
