Meta description added to events

--- a/templates/EventsEngine/event_list.html
+++ b/templates/EventsEngine/event_list.html
@@ -2,12 +2,12 @@
 {% load static %}
 {% block meta_tags %}
 
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="keywords" content="">
+<meta property="og:title" content=" Hack For Change Ongoing Events">
+<meta name="description" property="og:description" content="Explore our wide range of events. Sign up for Free and get knowledge on how technology can be used to solve social problems from best professionals.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/events/">
 {% endblock %}
 {% block title %} Ongoing Events | Hack For Change {% endblock %}
 
