Meta description added

--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -1,12 +1,12 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
 {% block meta_tags %}
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="keywords" content="">
+<meta property="og:title" content="Problem Statements">
+<meta name="description" property="og:description" content="Explore various problem statements suggested by organizations with deep domain expertise Suggest a problem statement">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/problem-statements/">
 {% endblock %}
 {% block title %} Problem Statements | Hack For Change {% endblock %}
 
