--- a/templates/HFC/terms_conditions.html
+++ b/templates/HFC/terms_conditions.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% block meta_tags %}
 <meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta property="og:title" content="Terms and Conditions Hack for Change">
+<meta name="description" property="og:description" content="This particular page describes the general and legal conditions between Hack For Change and Website user.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/terms-conditions/">
 {% endblock %}
 {% block title %} Terms and Conditions | Hack For Change {% endblock %}
 {% block main %}
