--- a/templates/blog/blog_list.html
+++ b/templates/blog/blog_list.html
@@ -6,7 +6,7 @@
 <meta name="description" property="og:description" content="">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/blog/">
 {% endblock %}
 {% block title %} Blog | Hack For Change {% endblock %}
 {% block main %}
