--- a/templates/HFC/contact.html
+++ b/templates/HFC/contact.html
@@ -1,5 +1,13 @@
 {% extends 'HFC/layout.html'%}
 {% load static %}
+{% block meta_tags %}
+<meta name="keywords" content="">
+<meta property="og:title" content=" Hack For Change Contact">
+<meta name="description" property="og:description" content="How can we help? Do you have a question or are you interested in working with us for social change? Just fill out the form fields below.">
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
+<meta property="og:url" content="https://www.hackforchange.co.in/contact/">
+{% endblock %}
 {% block title %} Contact Us | Hack For Change {% endblock %}
 {% block main %}
 <!--Banner start -->
