--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block meta_tags %}
 
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="keywords" content="">
+<meta property="og:title" content="Hack for Change Projects">
+<meta name="description" property="og:description" content="Ongoing solutions designed and developed by community to empower citizens and make a social change in India.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
