Meta description added to pages

--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% block meta_tags %}
 <meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta property="og:title" content="Community Hack For Change">
+<meta name="description" property="og:description" content="Hack For Change community is a group of developers, designers, facilitators, students across various cities and colleges of India.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/community">
 {% endblock %}
 {% block title %} Community | Hack For Change {% endblock %}
 
