--- a/templates/HFC/hfc_home.html
+++ b/templates/HFC/hfc_home.html
@@ -1,13 +1,12 @@
 {% extends "HFC/layout.html" %}
 {% load static  %}
-
 {% block meta_tags %}
 <meta name="keywords" content="">
 <meta property="og:title" content="Hack For Change">
-<meta property="og:description" name="description"  content="Lets join hands to create a lasting social change !!! Our approach to empowerment is to design technology-driven systemic solutions for present-day social challenges">
-<meta property="og:type" content="article">
+<meta property="og:description" name="description"  content="Hack For Change is a community of developers, designers, marketers and facilitators focused on solving specific problem statements proposed by social, governmental and non-governmental organizations, using emerging technologies.">
+<meta property="og:type" content="website">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/">
 {% endblock %}
 {% block title %}Home | Hack For Change{% endblock %}
 
