--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -3,7 +3,8 @@
 {% block meta_tags %}
 <meta name="keywords" content="">
 <meta property="og:title" content="Problem Statements">
-<meta name="description" property="og:description" content="Explore various problem statements suggested by organizations with deep domain expertise Suggest a problem statement">
+<meta name="description" property="og:description" content="Explore various problem statements suggested by organizations with deep domain expertise,Our problem statements are specifically
+focused on empowering individuals socially and economically using tech-driven solutions.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="https://www.hackforchange.co.in/problem-statements/">
