--- a/templates/HFC/privacy_policy.html
+++ b/templates/HFC/privacy_policy.html
@@ -1,12 +1,12 @@
 {% extends 'HFC/layout.html'%}
 {% load static %}
 {% block meta_tags %}
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="keywords" content="">
+<meta property="og:title" content="Privacy Policy Hack For Change">
+<meta name="description" property="og:description" content="This particular page describes the privacy policy apply to the use of the website and products provided by Hack For Change.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/privacy-policy/">
 {% endblock %}
 {% block title %} Privacy Policy | Hack For Change {% endblock %}
 {% block main %}
