Meta description added to problem statement

--- a/templates/HFC/issue_area.html
+++ b/templates/HFC/issue_area.html
@@ -1,12 +1,12 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
 {% block meta_tags %}
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="keywords" content="">
+<meta property="og:title" content="Focus Areas Hack For Change">
+<meta name="description" property="og:description" content="Our primary focus is on empowering lasting social change by improving ones' relationship with the government and also with his community as a whole">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/focus-areas/">
 {% endblock %}
 {% block title %} Focus Areas | Hack For Change {% endblock %}
 
