--- a/templates/HFC/problem_statements_with_issue_area.html
+++ b/templates/HFC/problem_statements_with_issue_area.html
@@ -2,13 +2,13 @@
 {% load static %}
 {% block meta_tags %}
 <meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta property="og:title" content="Problem Statement related to Focus Areas">
+<meta name="description" property="og:description" content="Our problem statements are specifically focused on empowering individuals socially and economically using tech-driven solutions.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
 {% endblock %}
-{% block title %} {{prob_list.problem_statement|safe}} | Hack For Change {% endblock %}
+{% block title %} Problem Statement related to Focus Areas | Hack For Change {% endblock %}
 
 {% block main %}
 <!--Banner start -->
