Donatepage meta added

--- a/templates/HFC/donate.html
+++ b/templates/HFC/donate.html
@@ -1,12 +1,12 @@
 {% extends 'HFC/layout.html'%}
 {% load static %}
 {% block meta_tags %}
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="keywords" content="">
+<meta property="og:title" content="Make a donation Hack For Change">
+<meta name="description" property="og:description" content="Contrary to common belief, communitydriven initiatives need long term resources to actively build and manage such efforts.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/donate/">
 {% endblock %}
 {% block title %} Donate | Hack For Change {% endblock %}
 
