Meta tags added to center/chapter signup

--- a/templates/HFC/center_contributor_signup.html
+++ b/templates/HFC/center_contributor_signup.html
@@ -2,13 +2,13 @@
 {% load static %}
 {% block meta_tags %}
 <meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta property="og:title" content="{{center.organization_name}} Contributor Signup">
+<meta name="description" property="og:description" content="We are looking for developers, designers, marketers and management professionals and even students to join our city chapter or a college level centre.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
 {% endblock %}
-{% block title %} Contributor Signup | Hack For Change {% endblock %}
+{% block title %} {{center.organization_name}} Contributor Signup | Hack For Change {% endblock %}
 
 {% block main %}
 <!--Banner start -->
