--- a/templates/blog/blog_list.html
+++ b/templates/blog/blog_list.html
@@ -1,9 +1,9 @@
 {% extends "HFC/layout.html" %}
 {% load static %}
 {% block meta_tags %}
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="keywords" content="">
+<meta property="og:title" content=" Hack For Change Latest Updates">
+<meta name="description" property="og:description" content=" This blog is all about how technology can help to make social changes in India through community driven efforts.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="https://www.hackforchange.co.in/blog/">
