--- a/templates/EventsEngine/event_signup.html
+++ b/templates/EventsEngine/event_signup.html
@@ -1,14 +1,14 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
 {% block meta_tags %}
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="keywords" content="{{event.keywords}}">
+<meta property="og:title" content="{{event.title}}">
+<meta name="description" property="og:description" content="{{event.description|striptags|truncatewords:40 }}">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
 {% endblock %}
-{% block title %} Event Signup | Hack For Change {% endblock %}
+{% block title %} {{event.title | safe}} Signup | Hack For Change {% endblock %}
 
 {% block main %}
 <!--Banner start -->
