--- a/templates/HFC/mentor_signup.html
+++ b/templates/HFC/mentor_signup.html
@@ -1,12 +1,12 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
 {% block meta_tags %}
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="keywords" content="">
+<meta property="og:title" content="Mentor signup">
+<meta name="description" property="og:description" content="We are looking for experienced developers, designers, marketers and management professionals to join us as a mentor to guide our community of students.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/mentor/signup/">
 {% endblock %}
 {% block title %} Mentor Signup | Hack For Change {% endblock %}
 
