--- a/templates/EventsEngine/event_signup_expire.html
+++ b/templates/EventsEngine/event_signup_expire.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block meta_tags %}
 
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="keywords" content="">
+<meta property="og:title" content="{{event.keywords}}">
+<meta name="description" property="og:description" content="{{event.description|striptags|truncatewords:40}}">
 <meta property="og:type" content="article" >    
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
