--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -1,12 +1,12 @@
 {% extends 'HFC/layout.html'%}
 {% load static %}
 {% block meta_tags %}
-<meta content="" name="keywords">
+<meta name="keywords" content="">
 <meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta name="description" property="og:description" content="Organizations with deep domain expertise and on the path to empower citizens of India are requested to suggest problem statements, along with possible solutions to some of the pressing issues in India.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/problem-statement/suggest/">
 {% endblock %}
 {% block title %} Suggest Problem Statement | Hack For Change {% endblock %}
 {% block main %}
