meta description added to join team

--- a/templates/HFC/job_application.html
+++ b/templates/HFC/job_application.html
@@ -1,12 +1,12 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
 {% block meta_tags %}
-<meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta  name="keywords" content="" >
+<meta property="og:title" content=" Join the core Hack For Change Team">
+<meta name="description" property="og:description" content="We are looking for developers, designers, marketers and management professionals and students to join our core Hack For Change team.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/core-team/join/">
 {% endblock %}
 {% block title %} Job Application | Hack For Change {% endblock %}
 
