--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block meta_tags %}
 <meta name="keywords" content="">
-<meta property="og:title" content="">
+<meta property="og:title" content=" Suggest Problem Statement">
 <meta name="description" property="og:description" content="Organizations with deep domain expertise and on the path to empower citizens of India are requested to suggest problem statements, along with possible solutions to some of the pressing issues in India.">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
