meta description added to community signup

--- a/templates/HFC/community_member.html
+++ b/templates/HFC/community_member.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% block meta_tags %}
 <meta content="" name="keywords">
-<meta property="og:title" content="">
-<meta name="description" property="og:description" content="">
+<meta property="og:title" content="Join Hack For Change Community">
+<meta name="description" property="og:description" content="We are looking for developers, designers, marketers and management professionals and even students to join our Hack for Change Community">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<meta property="og:url" content="">
+<meta property="og:url" content="https://www.hackforchange.co.in/community/signup/">
 {% endblock %}
 {% block title %} Community Member Signup | Hack For Change {% endblock %}
 
