solution partner added

--- a/templates/HFC/hfc_home.html
+++ b/templates/HFC/hfc_home.html
@@ -99,7 +99,7 @@
 <div class="we-work-wrap">
     <div class="content-width">
         <div class="we-work__main">
-            <h2 class="underline">Our brothers in arms</h2>
+            <h2 class="underline">Our solution partners</h2>
             <p class="large">A few of the governmental, non-governmental and social organisations who have partned with
                 us, to scale their mission, using our community of developers and designers </p>
             <div class="we-work__sec">
