--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -48,7 +48,7 @@
                         <div class="main__community-sec">
                             <p class="large sbold">{{center.organization_name}}</p>
                             <p>{{center.project.count}} Projects, {{center.community_member_set.count}} Members</p>
-                            <a href="center/{{center.organization_name_slug}}/signup/" class="btn btn--border" id="center_contrib">Join as a member</a>
+                            <a href="centre/{{center.organization_name_slug}}/signup/" class="btn btn--border" id="center_contrib">Join as a member</a>
                         </div>
                     </div>
                     {% endfor %}
