Chapter is added to url

--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -75,7 +75,7 @@
                         <div class="main__community-sec">
                             <p class="large sbold">{{chapter.organization_name}}</p>
                             <p>{{chapter.project.count}} Projects, {{chapter.community_member_set.count}} Members</p>
-                            <a href="{{chapter.organization_name_slug}}/signup/" class="btn btn--hfc">Join as a
+                            <a href="chapter/{{chapter.organization_name_slug}}/signup/" class="btn btn--hfc">Join as a
                                 member</a>
                         </div>
                     </div>
